# C406pro_Hack

./: .clangd  .gitignore  C406pro_Hack.code-workspace  C406pro_Hack.jdebug  C406pro_Hack.jflash  CMakeLists.txt  README.md  app.overlay  prj.conf
app/: .clang-format  CMakeLists.txt  Kconfig  app.overlay  prj.conf  west.yml
app/boards/arm/C406pro/: C406pro-pinctrl.dtsi  C406pro.dts  C406pro_defconfig  Kconfig
app/module/drivers/: CMakeLists.txt  Kconfig
app/module/drivers/spl06/: Kconfig  spl06.c
app/module/drivers/st75256/: CMakeLists.txt  Kconfig  display_st75256.c
app/src/: gnss.c  gnss.h  main.c  main_page.c
boards/arm/C406pro/: C406pro-pinctrl.dtsi  C406pro.dts  C406pro.yaml  Kconfig.board  Kconfig.defconfig  board.cmake
drivers/: CMakeLists.txt  Kconfig
drivers/spl06/: CMakeLists.txt  spl06.h
drivers/st75256/: Kconfig  display_st75256.c  display_st75256.h
dts/bindings/: goertek,spl06.yaml  sitronix,st75256.yaml
src/: battery.c  battery.h  button.cpp  button.h  button_event.cpp  button_event.h  main.c  main_page.c  main_page.h
